# pipelines

./: .dbtignore  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.prefect3  Makefile  ONBOARDING.md  README.md  cloud_test.py  code_owners.yaml  dbt_project.yml  docker-compose.yaml  entrypoint.sh  et --hard HEAD@{1}  manage.py  ncm.csv  package-lock.yml  packages.yml  profiles.yml  pyproject-old.toml  pyproject.toml  requirements-cli.txt  requirements-deploy.txt  requirements-test.txt  test_cloud.py  test_local.py  test_pipelines.py  tests.py  total_test.py  upload.py  windows-setup.md
.claude/: CLAUDE.md
.claude/agents/: architecture.md  cleaner.md  context.md  dbt.md  discover.md  metadata.md  onboarding-pipeline.md  onboarding.md  orchestrator.md  pipeline.md  pr.md  raw-data-downloader.md  uploader.md  validator.md
.claude/commands/: databasis-context.md  databasis-dbt-run.md  databasis-metadata.md  databasis-pr.md  onboarding-architecture.md  onboarding-clean.md  onboarding-context.md  onboarding-dbt-run.md  onboarding-dbt.md  onboarding-discover.md  onboarding-metadata.md  onboarding-pr.md  onboarding-upload.md
.claude/hooks/: pre-compact.py  protect-raw.sh
.claude/rules/: bigquery-conventions.md  data-basis-style.md  dbt-conventions.md  metadata-schema.md  onboarding-workflow.md  prefect-pipeline-conventions.md
.claude/skills/: onboarding-architecture.md  onboarding-clean.md  onboarding-context.md  onboarding-dbt.md  onboarding-discover.md  onboarding-download.md  onboarding-metadata.md  onboarding-pipeline.md  onboarding-pr.md  onboarding-upload.md  onboarding-validate.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  chore.yml  code-docs.yml  databug-report.yml  feature-request.yml  new-data.yml  new-pipeline.yml  update-data.yml
.github/scripts/: deploy_flows.py
.github/workflows/: build-docker-base.yaml  build-docker-prefect3-dev.yaml  build-docker-prefect3.yaml  build-docker.yaml  cd-prefect3-staging.yaml  cd-prefect3.yaml  cd-staging.yaml  cd-table-prod.yaml  cd.yaml  cd_staging.yaml  ci-dbt.yaml  ci-docker.yaml  ci-python.yaml  ci.yaml  dbt-run-prod.yaml  dbt-test.yaml  docs.yaml  elementary.yaml  lint_python.yaml  pr-checks.yaml  productivity.yml  table-approve.yaml  test_dbt_model.yaml  triggers-elementary-model.yaml
.zed/: tasks.json
bash_scripts/: append.sh
bash_scripts/br_ms_vacinacao_covid19/: append_partitions.sh  append_states.sh  create_dirs.sh
br_denatran_frota/: README.md  dataset_config.yaml
br_denatran_frota/code/: constants.py  download_frota.R  download_frota.py  download_frota_gpt.py  download_frota_old.R  download_frota_old.py  frota_municipio_tipo.R  frota_municipio_tipo.py  frota_uf_tipo.R  frota_uf_tipo.py  setup.py  test_drive.ipynb  utils.R  utils.py
br_denatran_frota/municipio_tipo/: publish.sql  table_config.yaml
br_denatran_frota/uf_tipo/: publish.sql  table_config.yaml
docs/: deleteFlowsFromPython.md  readingLogs.md
macros/: add_ano_mes_operacao_data.sql  br_me_rais_vinculos_select.sql  cnes_columns_standartization.sql  custom_get_where_subquery.sql  dicionario_not_found.sql  project_path.sql  set_datalake_project.sql  transform_mdic_country_code.sql  validate_date_range.sql  validate_null_cols.sql
models-data-api/: basic.sql
models-data-api/economy/: ipca.sql  schema.yml
models-data-api/municipality/: basic.sql  municipality__mayor.sql  schema.yml
models-data-api/school/: schema.yml  school__basic.sql
models/af_afrobarometer_survey/: af_afrobarometer_survey__dicionario.sql  af_afrobarometer_survey__round1.sql  af_afrobarometer_survey__round2.sql  af_afrobarometer_survey__round3.sql  af_afrobarometer_survey__round4.sql  af_afrobarometer_survey__round5.sql  af_afrobarometer_survey__round6.sql  af_afrobarometer_survey__round7.sql  af_afrobarometer_survey__round8.sql  af_afrobarometer_survey__round9.sql  schema.yml
models/br_anatel_banda_larga_fixa/: br_anatel_banda_larga_fixa__densidade_brasil.sql  br_anatel_banda_larga_fixa__densidade_municipio.sql  br_anatel_banda_larga_fixa__densidade_uf.sql  br_anatel_banda_larga_fixa__microdados.sql  schema.yml
models/br_anatel_indice_brasileiro_conectividade/: br_anatel_indice_brasileiro_conectividade__municipio.sql  schema.yml
models/br_anatel_telefonia_movel/: br_anatel_telefonia_movel__densidade_brasil.sql  br_anatel_telefonia_movel__densidade_municipio.sql  br_anatel_telefonia_movel__densidade_uf.sql  br_anatel_telefonia_movel__microdados.sql  schema.yml
models/br_anp_precos_combustiveis/: br_anp_precos_combustiveis__microdados.sql  schema.yml
models/br_ans_beneficiario/: br_ans_beneficiario__dicionario.sql  br_ans_beneficiario__informacao_consolidada.sql  informacao_consolidada.sql  schema.yml
models/br_b3_cotacoes/: br_b3_cotacoes__cotacoes.sql  br_b3_cotacoes__dicionario.sql  schema.yml
models/br_bcb_agencia/: br_bcb_agencia__agencia.sql  schema.yml
models/br_bcb_estban/: br_bcb_estban__agencia.sql  br_bcb_estban__dicionario.sql  br_bcb_estban__municipio.sql  schema.yml
models/br_bcb_sicor/: br_bcb_sicor__dicionario.sql  br_bcb_sicor__empreendimento.sql  br_bcb_sicor__liberacao.sql  br_bcb_sicor__microdados_liberacao.sql  br_bcb_sicor__microdados_operacao.sql  br_bcb_sicor__microdados_operacoes_desclassificadas.sql  br_bcb_sicor__microdados_recurso_publico_complemento_operacao.sql  br_bcb_sicor__microdados_recurso_publico_cooperado.sql  br_bcb_sicor__microdados_recurso_publico_gleba.sql  br_bcb_sicor__microdados_recurso_publico_mutuario.sql  br_bcb_sicor__microdados_recurso_publico_propriedade.sql  br_bcb_sicor__microdados_saldo.sql  schema.yml  (+8 more)
pipelines/: __init__.py  constants.py  cookiecutter.json  flows.py  tasks.py  test_prefect3.py  utils.py
scripts/: create_dictionary.py  deploy_dbt_model_flow.py  dockerfile_setup.py  launch_materialization.py  link_directory_metadata.py  lint.py  upload_columns.py
tests/: test_flow.py  test_igp.py
utils/: bump-date.ipynb
(+2367 files in other folders)
