[tool.poetry]
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
description = ""
license = "GPL-3.0"
name = "pipelines"
version = "0.1.0"

[tool.poetry.dependencies]
HeapDict = "1.0.1"
Jinja2 = "3.0.3"
MarkupSafe = "2.0.1"
PyYAML = "6.0"
Unidecode = "^1.3.4"
basedosdados = "2.0.0b5"
beautifulsoup4 = "4.11.1"
cachetools = "4.2.4"
certifi = "2021.10.8"
charset-normalizer = "2.0.9"
ckanapi = "4.6"
click = "^8.0.3"
cloudpickle = "2.0.0"
croniter = "1.0.15"
dask = "2021.11.2"
dbt-client = "^0.1.3"
distributed = "2021.11.2"
docker = "5.0.3"
docopt = "0.6.2"
fake-useragent = "^1.1.3"
fsspec = "2021.11.1"
google-analytics-data = "0.17.0"
google-api-core = "2.11.1"
google-api-python-client = "^2.58.0"
google-auth = "2.22.0"
google-auth-oauthlib = "^1.0.0"
google-cloud-bigquery = "^3.11.4"
google-cloud-bigquery-storage = "^2.19.1"
google-cloud-core = "2.3.3"
google-cloud-storage = "^2.9.0"
google-crc32c = "1.3.0"
google-resumable-media = "2.5.0"
googleapis-common-protos = "1.59.1"
grpcio = "1.56.2"
hvac = "^0.11.2"
idna = "3.3"
ipeadatapy = "^0.1.7"
locket = "0.2.1"
loguru = "^0.7.0"
lxml = "4.9.2"
marshmallow = "3.14.1"
marshmallow-oneofschema = "3.0.1"
matplotlib = "^3.5.2"
msgpack = "1.0.3"
mypy-extensions = "0.4.3"
numpy = "1.21.4"
oauth2client = "^4.1.3"
oauthlib = "3.1.1"
openpyxl = "3.0.9"
packaging = "21.3"
pandas = "^2.0.1"
pandas-gbq = "^0.19.2"
partd = "1.2.0"
prefect = "0.15.9"
proto-plus = "1.22.3"
protobuf = "4.23.4"
psutil = "5.8.0"
pyaml = "20.4.0"
pyarrow = "6.0.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pydata-google-auth = "^1.8.0"
pymssql = "2.2.5"
pyparsing = "3.0.6"
python = ">=3.10,<3.11"
python-Levenshtein = "^0.21.1"
python-box = "5.4.1"
python-dateutil = "2.8.2"
python-slugify = "5.0.2"
pytz = "2021.3"
pytzdata = "2020.1"
redis-pal = "^1.0.0"
requests = "2.26.0"
requests-oauthlib = "1.3.0"
rsa = "4.8"
"ruamel.yaml" = "0.17.10"
"ruamel.yaml.clib" = "0.2.6"
rpy2 = "^3.5.11"
seaborn = "^0.11.2"
six = "1.16.0"
sortedcontainers = "2.4.0"
tabulate = "0.8.9"
tblib = "1.7.0"
text-unidecode = "1.3"
toml = "0.10.2"
tomlkit = "^0.11.8"
toolz = "0.11.2"
tornado = "6.1"
tqdm = "^4.65.0"
tweepy = "4.4.0"
urllib3 = "1.26.8"
websocket-client = "1.2.1"
wget = "^3.2"
zict = "2.0.0"
polars = "^0.19.0"
selenium = "^4.11.2"
fastparquet = "^2023.7.0"
rarfile = "^4.0"
setuptools = ">=69.0.0"
python-string-utils = "^1.0.0"
geopandas = "0.13.2"
shapely = "2.0.1"
webdriver-manager = "^4.0.1"
xlrd = ">=2.0.1"
httpx = "^0.26.0"
parameterized = "^0.9.0"
cffi = "^1.16.0"
pendulum = "^3.0.0"
simpledbf = "^0.2.6"
aioftp = "^0.22.3"
pathlib = "^1.0.1"
dbfread = "^2.0.7"
aiohttp = "^3.9.3"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.2.0"
yamlfix = "^1.16.0"
shandy-sqlfmt = "^0.20.0"
typer = "^0.4.0"
cookiecutter = "^1.7.3"
networkx = "2.6.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
networkx = "^2.6.3"
parameterized = "^0.9.0"

[tool.poetry.scripts]
lint = "scripts.lint:main"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["pipelines"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
